--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "referral",
+  "name": "chatbot",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -13,5 +13,29 @@
     "url": "git@github.com-Mubeen213:Mubeen213/Chatbot.git"
   },
   "author": "Mubeen",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.37.3",
+    "concurrently": "^8.0.1",
+    "cookie-parser": "^1.4.6",
+    "datauri": "^4.1.0",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.8.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.5",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.2",
+    "nodemon": "^2.0.22",
+    "openai": "^4.31.0"
+  }
 }
